# roman

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  acinclude.m4  configure.ac
build-aux/: .gitignore
doc/: int2roman.3.in  int2roman_r.3  long2roman.3  long2roman.3.in  long2roman_r.3  roman.1.in  roman.7.in  roman2int.3.in  roman2long.3  roman2long.3.in  roman_asctime.3  roman_asctime_r.3  roman_ctime.3.in  roman_ctime_r.3  roman_strftime.3.in  romandate.1.in  romannum.1.in  romannumeral.7
examples/: int2roman.c  long2roman.c  roman2int.c  roman2long.c  roman_asctime.c  roman_ctime.c  roman_strftime.c
gnu/: gendist.sh
include/: roman.h
lib/: libroman.c  libroman.def  libroman.def.in  libroman.h  libroman.sym
roman.xcodeproj/: project.pbxproj
src/: roman_charts.c  roman_charts.h  romandate.c  romannum.c
tests/: check_int2roman.c  check_long2roman.c  check_roman2int.c  check_roman2int_c.c  check_roman2int_ccccc.c  check_roman2int_d.c  check_roman2int_dm.c  check_roman2int_i.c  check_roman2int_iiiii.c  check_roman2int_l.c  check_roman2int_lc.c  check_roman2int_m.c  check_roman2int_mmmmm.c  check_roman2int_n.c  check_roman2int_v.c  check_roman2int_vx.c  check_roman2int_x.c  check_roman2int_xxxxx.c  check_roman2long.c
